--- a/templates/register.html
+++ b/templates/register.html
@@ -145,7 +145,7 @@
       <label for="role">Função de Usuário</label>
       <select id="role" name="role">
         <option value="comum">Usuário Comum</option>
-        <option value="moderador">Mecânico</option>
+        <option value="mecanico">Mecânico</option>
         <option value="solucionador">Solucionador</option>
       </select>
 
@@ -153,7 +153,6 @@
     </form>
     <div class="links-auth">
       <a href="{{ url_for('login') }}">Login</a>
-      <!-- Página Inicial removida -->
     </div>
   </main>
 
