--- a/templates/index.html
+++ b/templates/index.html
@@ -273,7 +273,7 @@
         <input
           type="text"
           name="q"
-          placeholder="Pesquise um problema mecânico resolvido"
+          placeholder="Pesquise um problema mecânico"
           autocomplete="off"
         />
       </form>
