--- a/templates/resultados.html
+++ b/templates/resultados.html
@@ -70,13 +70,13 @@
       text-align: center;
     }
 
-    /* MAIN */
+    /* MAIN: ajuste para ficar com a mesma largura de container das outras páginas (ex: 1200px) */
     main {
       flex: 1;
       font-size: 1.25rem;
       padding: 2rem;
       width: 100%;
-      max-width: 900px;
+      max-width: 1200px;
       margin: 0 auto;
       display: flex;
       flex-direction: column;
